--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "13.3.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@popperjs/core": "^2.11.4",
+    "aos": "^2.3.4",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.3",
